Replace List.of() with Collections.singletonList() in SplitBrainHandlerTest
Original PR is on newer Java version, which supports `List#of`, however this backport does not.